@@ -1,0 +1,31 @@
+from .test_cyther import test_cyther
+from .system import INFO
+
+
+def info():
+    print(INFO)
+    exit()
+
+
+def configure():
+    pass
+
+
+def test():
+    test_cyther()
+
+
+def setup():
+    pass
+
+
+def make():
+    pass
+
+
+def clean():
+    pass
+
+
+def purge():
+    pass
