@@ -1,0 +1,4 @@
+import cyther
+
+ret = cyther.core('info')
+print(ret)
