@@ -94,6 +94,7 @@
     Deleted the 'super-flags'. Probably not a very good practice...
     Changed the signature of argparser. Now vastly superior to the previous model.
         Reformatted the arguments.py file to be easier to read
+    Implemented an 'actions' file for the arguments to call directly!
     TODO (not yet done)
     Implemented a 'makefile' system. This is not the primary method of compilation.
         Instead of directly calling commands, it will make a 'makefile', for later modification if desired
